...
          headerTitle: '💑 Futari',
        }}
      />
      <Tabs.Screen
        name="expenses"
        options={{
          title: '家計',
          tabBarIcon: ({ color }) => <TabBarIcon name="yen" color={color} />,
          headerTitle: '家計管理',
        }}
      />
      <Tabs.Screen
        name="chores"
        options={{
          title: '家事',
          tabBarIcon: ({ color }) => <TabBarIcon name="check-square-o" color={color} />,
          headerTitle: '家事分担',
        }}
      />
      <Tabs.Screen
        name="shopping"
...
